--- a/css/index.css
+++ b/css/index.css
@@ -249,9 +249,39 @@ p{
 
 /* responssive */
 
-@media ( 500px <= width <= 900px) {
+/* ressponsive de la introducción */
+@media ( 10px <= width <= 900px) {
     .introduction-goup-1{
         flex-direction: column-reverse;
         gap: 30px;
+    }
+
+    .introduction-goup-2-images{
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+}
+
+@media ( 10px <= width <= 710px) {
+    .welcome-ucol_icon{
+        width: 300px;
+        height: 150px;
+    }
+
+    .welcome-title{
+        width: 300px;
+        font-size: 18px;
+        margin-top: 25px;
+    }
+
+    .welcome-bach-name{
+        font-size: 25px;
+    }
+}
+
+@media ( 10px <= width <= 500px) {
+    .introduction-goup-1-p{
+        width: 300px;
     }
 }
